--- a/DBconfiguration/docker-compose.yaml
+++ b/DBconfiguration/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     #image: postgres:15
     build: . #Construir contenedor usando Dockerfile presente en el directorio actual (.)
-    container_name: ContDBpractMod3 # Nombre del contenedor
+    container_name: ContDBpracticaModulo3 # Nombre del contenedor
     ports:
      - "5432:5432" # Puerto para conectar desde tu máquina host al contenedor
     environment:
